@@ -1,5 +1,9 @@
 2019-04-18  Richard Sandiford  <richard.sandiford@arm.com>
 
+	* fold-const.c (int_const_binop): Return early on failure.
+
+2019-04-18  Richard Sandiford  <richard.sandiford@arm.com>
+
 	PR middle-end/85164
 	* combine.c (force_int_to_mode): Cast the argument rather than
 	the result of known_alignment.
